# waywall

./: README.md  agent.md  flake.nix  meson.build  result
configs/: chat.lua  dkjson.lua  fetch_emotes.lua  init.lua  keybinds.lua  paths.lua  priv.lua  remaps.lua  toggles.lua  utf8.lua
include/: animation.h  http.h  irc.h  scene.h  wrap.h
include/config/: config.h  internal.h  vm.h
include/drm/: drm_syncobj.h
include/libircclient/: libircclient.h
include/server/: backend.h  gl.h  server.h  ui.h  vk.h  wl_compositor.h  wl_output.h  wp_linux_dmabuf.h  wp_linux_drm_syncobj.h
include/util/: avif.h  debug.h  png.h  sysinfo.h
lua configs/: chat.lua  emoteset.json  fetch_emotes.lua  init.lua  keybinds.lua  paths.lua  priv.lua  remaps.lua  toggles.lua
lua configs/emotes/: Boating.avif  COPIUM.avif  FIRE.avif  Scared.avif  bunny.avif  carrot.avif  estrogen.avif  fall.avif  jourona.avif  meow.avif  moew.avif  woof.avif
waywall/: animation.c  http.c  irc.c  main.c  meson.build  scene.c  subproc.c  wrap.c
waywall/config/: api.c  config.c  internal.c  vm.c
waywall/glsl/: meson.build  texcopy.frag  texcopy.vert  text.frag
waywall/lua/: api.lua  helpers.lua
waywall/server/: backend.c  buffer.c  bunny.c  gl.c  server.c  ui.c  vk.c  wl_compositor.c  wl_data_device_manager.c  wl_output.c  wp_linux_dmabuf.c  wp_linux_drm_syncobj.c  xwm.c
waywall/shaders/: blit.frag  blit.vert  blit_buffer.frag  embed_spirv.py  image.frag  meson.build  mirror.frag  texcopy.frag  texcopy.vert  text.frag
waywall/util/: avif.c  debug.c  png.c  sysinfo.c
